# fx-codex

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SYSTEM_OVERVIEW.md  auto_optimize.py  fetch_dukascopy.py  fx_briefing.py  fx_briefing_loop.sh  fx_tf_snapshot.py  fx_tf_snapshot_loop.sh  params_gate.py  promote_params.py  pyproject.toml  tv_discord_notify.py  tv_notify_loop.sh
.claude/: launch.json
agent_os/: __init__.py  cli.py
config/: data_platform_slo_v1.json
data_platform/: __init__.py
docs/: AGENT_OPERATING_SYSTEM_DESIGN.md  AI_LEARNING_V2_DESIGN.md  AUTOMATED_TRADING_POLICY.md  B_LEARNING_AXES_AND_FEEDBACK_DESIGN.md  C_INPUT_CONTEXT_AND_LIQUIDITY_DESIGN.md  DATA_MOAT_GAP_ANALYSIS.md  DATA_PLATFORM_V2.md  D_EVALUATION_LABEL_AND_TUNING_DESIGN.md  FX_AI_OPERATIONS.md  INSTITUTIONAL_ARCHITECTURE.md  INSTITUTIONAL_FX_AI_TARGET.md  ISSUES.md  MIGRATION_NOTES.md  MODEL_GOVERNANCE.md  MODEL_PROMOTION_POLICY.md  OPERATIONS_RUNBOOK.md  PR_MIGRATION_PLAN.md  RESEARCH_PROTOCOL.md  SYSTEM_LOGIC_DATA_QUALITY_VALIDATION.md  VALIDATION_PROTOCOL_V2.md
dukascopy_cftc_model/: README.md  __init__.py  cftc.py  cli.py  config.py  dukascopy.py  features.py  labels.py  pipeline.py  quality.py  report.py  ridge.py  signal.py  walk_forward.py
examples/: generate_sample_data.py  sample_events.csv  sample_prices.csv
experiments/: README.md  TEMPLATE.experiment.json  eurusd-histdata-real-2024-1h-20260713.json  gbpusd-histdata-real-2024-1h-20260713.json  usdjpy-dukascopy-bidask-2024-1h-20260715.json  usdjpy-histdata-real-2024-1h-20260713.json  usdjpy-synthetic-infra-selftest-20260712.json
fx_backtester/: __init__.py  analysis.py  artifacts.py  calibration.py  cli.py  data.py  drift.py  engine.py  execution.py  experiment_manifest.py  experiment_pipeline.py  failures.py  governance.py  indicators.py  kelly.py  labeling.py  lockbox.py  metrics.py  models.py  overfitting.py  pit_dataset.py  point_in_time.py  promotion_policy.py  qa.py  research.py  research_experiment.py  risk.py  shadow_execution.py  statistical_validation.py  stress.py  time_series_validation.py  trade_quality.py  tradingview.py  trial_ledger.py  trial_log.py  validation.py  validation_pipeline.py  (+1 more)
(+569 files in other folders)
