[project]
name = "fx-codex"
version = "0.2.0"
description = "Verifiable FX backtesting framework with risk controls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
  "requests>=2.31",
  "tradingview-ta>=3.3",
]

[project.scripts]
fx-backtester = "fx_backtester.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "black>=24.0",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# プロジェクト名(fx-codex)とパッケージ名が一致しないため明示指定が必要
packages = ["fx_backtester", "fx_intel", "data_platform"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
# trader/（Mac mini稼働スタック）は独自ツールチェーンで検証する（ci.ymlのtraderジョブ参照）。
# .claude/ は Claude Code のワークツリー複製で git-ignore 対象。ローカルの誤検知を防ぐため除外。
extend-exclude = "^/(trader|\\.claude)/"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["trader", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
